--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
     "@clerk/clerk-expo": "^2.6.6",
     "@clerk/types": "^4.40.0",
     "@expo/vector-icons": "^14.0.4",
+    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-community/datetimepicker": "8.2.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/drawer": "^7.1.1",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
-    "expo": "~52.0.23",
+    "expo": "^53.0.12",
     "expo-blur": "~14.0.1",
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.2",
@@ -41,6 +43,7 @@
     "expo-web-browser": "~14.0.1",
     "firebase": "^11.1.0",
     "lottie-react-native": "7.1.0",
+    "metro": "^0.79.1",
     "moment": "^2.30.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
